--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+        <link rel="stylesheet" href="dist/out.css">
     </head>
     <body>
         <div id="appRoot"></div>
